--- a/Codes/Pre_process_data.ipynb
+++ b/Codes/Pre_process_data.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd"
+    "## Prepare the data of Depedent variables. "
    ]
   },
   {
@@ -14,7 +12,363 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Diccionario de archivos Excel con sus respectivas hojas\n",
+    "file_sheet_dict = {\n",
+    "    \"../DataIn/VarDep/23_Var.Dep_Rede_EntreajudaLabur.xlsx\": \"HelpLabur_CentalitybByNodes\",\n",
+    "    \"../DataIn/VarDep/24_Var.Dep_RedeControlExtAusencia.xlsx\": \"ContrlExtAusenc_Trasp_Centr\",\n",
+    "    \"../DataIn/VarDep/25_Var.Dep_ApoioSpecDiqCint.xlsx\": \"ApoiSpecDiqCint_Transp_Centr\",\n",
+    "    \"../DataIn/VarDep/26_Var.Dep_ApoioSpecTubos.xlsx\": \"ApoioSpecTubos_Transp_Centr\",\n",
+    "    \"../DataIn/VarDep/29_Var.Dep_RedApoiLevntDiCin.xlsx\": \"ApoioLevantDiqCin_Transp_Centr\",\n",
+    "    \"../DataIn/VarDep/32_Var.Dep_RedCont_DiqPriqDiqCint.xlsx\": \"ControlDiqPriqCint_trans_Centr\",\n",
+    "    \"../DataIn/VarDep/35_Var.Dep_RedeRepar_DiqPriqDiqCint.xlsx\": \"ReparDiqPriqCint_trans_Centr\",\n",
+    "    \"../DataIn/VarDep/36_Var.Dep_Red-Val_Cont1Rep2DiqCin.xlsx\": \"DiqCintCont1Rep2_trans_Centr\",\n",
+    "    \"../DataIn/VarDep/37_Var.Dep_Red-Val_Cont1Rep2DiqPrq.xlsx\": \"DiqPriqContr1Rep2_trans_Centr\",\n",
+    "    \"../DataIn/VarDep/38_Var.Dep_Red-Val_ContRep2_DiqPrqCin.xlsx\": \"ContRepDiqPriqCint_trans_Centr\",\n",
+    "    \"../DataIn/VarDep/39_Var.Dep_RedePartilhaAgu.xlsx\": \"RedePartilhaAgua_CentrbByNodes\"\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo ../DataIn/VarDep/23_Var.Dep_Rede_EntreajudaLabur.xlsx leído exitosamente con sufijo Rede_EntreajudaLabur.\n",
+      "Archivo ../DataIn/VarDep/24_Var.Dep_RedeControlExtAusencia.xlsx leído exitosamente con sufijo Var.Dep_RedeControlExtAusencia.\n",
+      "Archivo ../DataIn/VarDep/25_Var.Dep_ApoioSpecDiqCint.xlsx leído exitosamente con sufijo Var.Dep_ApoioSpecDiqCint.\n",
+      "Archivo ../DataIn/VarDep/26_Var.Dep_ApoioSpecTubos.xlsx leído exitosamente con sufijo Var.Dep_ApoioSpecTubos.\n",
+      "Archivo ../DataIn/VarDep/29_Var.Dep_RedApoiLevntDiCin.xlsx leído exitosamente con sufijo Var.Dep_RedApoiLevntDiCin.\n",
+      "Archivo ../DataIn/VarDep/32_Var.Dep_RedCont_DiqPriqDiqCint.xlsx leído exitosamente con sufijo RedCont_DiqPriqDiqCint.\n",
+      "Archivo ../DataIn/VarDep/35_Var.Dep_RedeRepar_DiqPriqDiqCint.xlsx leído exitosamente con sufijo RedeRepar_DiqPriqDiqCint.\n",
+      "Archivo ../DataIn/VarDep/36_Var.Dep_Red-Val_Cont1Rep2DiqCin.xlsx leído exitosamente con sufijo Red-Val_Cont1Rep2DiqCin.\n",
+      "Archivo ../DataIn/VarDep/37_Var.Dep_Red-Val_Cont1Rep2DiqPrq.xlsx leído exitosamente con sufijo Red-Val_Cont1Rep2DiqPrq.\n",
+      "Archivo ../DataIn/VarDep/38_Var.Dep_Red-Val_ContRep2_DiqPrqCin.xlsx leído exitosamente con sufijo ContRep2_DiqPrqCin.\n",
+      "Archivo ../DataIn/VarDep/39_Var.Dep_RedePartilhaAgu.xlsx leído exitosamente con sufijo Var.Dep_RedePartilhaAgu.\n",
+      "Archivo combinado guardado exitosamente en ../DataIntermediate/combined_data_dep_variables.csv.\n",
+      "Dimensiones del DataFrame resultante: (130, 172)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Función para generar un sufijo corto basado en el nombre del archivo\n",
+    "def generate_short_suffix(file_name):\n",
+    "    base_name = os.path.splitext(os.path.basename(file_name))[0]\n",
+    "    parts = base_name.split('_')\n",
+    "    # Usar las últimas dos partes del nombre como sufijo\n",
+    "    return '_'.join(parts[-2:])\n",
+    "\n",
+    "# Leer cada archivo y almacenar los datos en un diccionario\n",
+    "data_frames = {}\n",
+    "\n",
+    "for file, sheet_name in file_sheet_dict.items():\n",
+    "    try:\n",
+    "        # Leer la hoja especificada\n",
+    "        df = pd.read_excel(file, sheet_name=sheet_name)\n",
+    "        # Generar un sufijo corto basado en el nombre del archivo\n",
+    "        suffix = generate_short_suffix(file)\n",
+    "        # Añadir sufijo a las columnas\n",
+    "        df = df.add_suffix(f'_{suffix}')\n",
+    "        # Renombrar columna id para tener un nombre consistente\n",
+    "        df = df.rename(columns={f'id_{suffix}': 'id'})\n",
+    "        data_frames[suffix] = df\n",
+    "        print(f\"Archivo {file} leído exitosamente con sufijo {suffix}.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error al leer el archivo {file}: {e}\")\n",
+    "\n",
+    "# Inicializar el DataFrame resultante con el primer DataFrame en el diccionario\n",
+    "result_df = None\n",
+    "\n",
+    "for suffix, df in data_frames.items():\n",
+    "    if result_df is None:\n",
+    "        result_df = df\n",
+    "    else:\n",
+    "        result_df = pd.merge(result_df, df, on='id', how='outer')\n",
+    "\n",
+    "# Guardar el DataFrame resultante en un archivo CSV\n",
+    "output_path = \"../DataIntermediate/combined_data_dep_variables.csv\"\n",
+    "os.makedirs(\"../DataIntermediate/\", exist_ok=True)\n",
+    "try:\n",
+    "    result_df.to_csv(output_path, index=False)\n",
+    "    print(f\"Archivo combinado guardado exitosamente en {output_path}.\")\n",
+    "    print(f\"Dimensiones del DataFrame resultante: {result_df.shape}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error al guardar el archivo combinado: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Degree_Rede_EntreajudaLabur</th>\n",
+       "      <th>BetaCent_Rede_EntreajudaLabur</th>\n",
+       "      <th>2Step_Rede_EntreajudaLabur</th>\n",
+       "      <th>ARD_Rede_EntreajudaLabur</th>\n",
+       "      <th>Closeness_Rede_EntreajudaLabur</th>\n",
+       "      <th>Eigenvector_Rede_EntreajudaLabur</th>\n",
+       "      <th>Between_Rede_EntreajudaLabur</th>\n",
+       "      <th>2StepBet_Rede_EntreajudaLabur</th>\n",
+       "      <th>Frag_Rede_EntreajudaLabur</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Out2Step_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>In2Step_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>OutARD_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>InARD_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>OutClose_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>InClose_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>Between_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>2StepBet_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>Frag_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>DwFrag_Var.Dep_RedePartilhaAgu</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aiace Quior</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.016946</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>251</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000401</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>511</td>\n",
+       "      <td>516</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000050</td>\n",
+       "      <td>0.000029</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alamada Bia</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.003419</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>256</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.001006</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>516</td>\n",
+       "      <td>516</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000071</td>\n",
+       "      <td>-0.000061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alanghate Mfumba</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.032262</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>248</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000037</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>516</td>\n",
+       "      <td>516</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000071</td>\n",
+       "      <td>-0.000061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Albat Calabus</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.032262</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>248</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000037</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>516</td>\n",
+       "      <td>516</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000071</td>\n",
+       "      <td>-0.000061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Americano Mbunde</td>\n",
+       "      <td>19</td>\n",
+       "      <td>29.068657</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>239</td>\n",
+       "      <td>0.223607</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.001053</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>516</td>\n",
+       "      <td>516</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000071</td>\n",
+       "      <td>-0.000061</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 172 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 id  Degree_Rede_EntreajudaLabur  \\\n",
+       "0       Aiace Quior                            7   \n",
+       "1       Alamada Bia                            2   \n",
+       "2  Alanghate Mfumba                           10   \n",
+       "3     Albat Calabus                           10   \n",
+       "4  Americano Mbunde                           19   \n",
+       "\n",
+       "   BetaCent_Rede_EntreajudaLabur  2Step_Rede_EntreajudaLabur  \\\n",
+       "0                       0.016946                           7   \n",
+       "1                       0.003419                           2   \n",
+       "2                       0.032262                          10   \n",
+       "3                       0.032262                          10   \n",
+       "4                      29.068657                          19   \n",
+       "\n",
+       "   ARD_Rede_EntreajudaLabur  Closeness_Rede_EntreajudaLabur  \\\n",
+       "0                         7                             251   \n",
+       "1                         2                             256   \n",
+       "2                        10                             248   \n",
+       "3                        10                             248   \n",
+       "4                        19                             239   \n",
+       "\n",
+       "   Eigenvector_Rede_EntreajudaLabur  Between_Rede_EntreajudaLabur  \\\n",
+       "0                          0.000000                             0   \n",
+       "1                          0.000000                             0   \n",
+       "2                          0.000000                             0   \n",
+       "3                          0.000000                             0   \n",
+       "4                          0.223607                             0   \n",
+       "\n",
+       "   2StepBet_Rede_EntreajudaLabur  Frag_Rede_EntreajudaLabur  ...  \\\n",
+       "0                              0                  -0.000401  ...   \n",
+       "1                              0                  -0.001006  ...   \n",
+       "2                              0                  -0.000037  ...   \n",
+       "3                              0                  -0.000037  ...   \n",
+       "4                              0                   0.001053  ...   \n",
+       "\n",
+       "   Out2Step_Var.Dep_RedePartilhaAgu  In2Step_Var.Dep_RedePartilhaAgu  \\\n",
+       "0                                 2                                0   \n",
+       "1                                 0                                0   \n",
+       "2                                 0                                0   \n",
+       "3                                 0                                0   \n",
+       "4                                 0                                0   \n",
+       "\n",
+       "   OutARD_Var.Dep_RedePartilhaAgu  InARD_Var.Dep_RedePartilhaAgu  \\\n",
+       "0                             1.5                            0.0   \n",
+       "1                             0.0                            0.0   \n",
+       "2                             0.0                            0.0   \n",
+       "3                             0.0                            0.0   \n",
+       "4                             0.0                            0.0   \n",
+       "\n",
+       "   OutClose_Var.Dep_RedePartilhaAgu  InClose_Var.Dep_RedePartilhaAgu  \\\n",
+       "0                               511                              516   \n",
+       "1                               516                              516   \n",
+       "2                               516                              516   \n",
+       "3                               516                              516   \n",
+       "4                               516                              516   \n",
+       "\n",
+       "   Between_Var.Dep_RedePartilhaAgu  2StepBet_Var.Dep_RedePartilhaAgu  \\\n",
+       "0                                0                                 0   \n",
+       "1                                0                                 0   \n",
+       "2                                0                                 0   \n",
+       "3                                0                                 0   \n",
+       "4                                0                                 0   \n",
+       "\n",
+       "   Frag_Var.Dep_RedePartilhaAgu  DwFrag_Var.Dep_RedePartilhaAgu  \n",
+       "0                      0.000050                        0.000029  \n",
+       "1                     -0.000071                       -0.000061  \n",
+       "2                     -0.000071                       -0.000061  \n",
+       "3                     -0.000071                       -0.000061  \n",
+       "4                     -0.000071                       -0.000061  \n",
+       "\n",
+       "[5 rows x 172 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_frame_combinado = pd.read_csv('../DataIntermediate/combined_data_dep_variables.csv', sep = ',')\n",
+    "\n",
+    "data_frame_combinado.head()"
+   ]
   }
  ],
  "metadata": {
