Update-combined_data_indep_variables

--- a/Codes/Pre_process_data.ipynb
+++ b/Codes/Pre_process_data.ipynb
@@ -369,6 +369,362 @@
     "\n",
     "data_frame_combinado.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare the data of Indepedent variables (variables to model). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo ../DataIn/VarExpl/0018_Rev_Var.Expl_RedConfliAguaTot.xlsx leído exitosamente con sufijo Var.Expl_RedConfliAguaTot.\n",
+      "Archivo ../DataIn/VarExpl/0019.1_RevV.Expl_RedConfliAguaReso.xlsx leído exitosamente con sufijo RevV.Expl_RedConfliAguaReso.\n",
+      "Archivo ../DataIn/VarExpl/12_Var.Explic_FamiRedIrmonsPrimos.xlsx leído exitosamente con sufijo Var.Explic_FamiRedIrmonsPrimos.\n",
+      "Archivo ../DataIn/VarExpl/13_Var.Explic_FamiRedPaiTiopatCriadr.xlsx leído exitosamente con sufijo Var.Explic_FamiRedPaiTiopatCriadr.\n",
+      "Archivo ../DataIn/VarExpl/14_Var.Explic_FamiRedTiosMaternos.xlsx leído exitosamente con sufijo Var.Explic_FamiRedTiosMaternos.\n",
+      "Archivo ../DataIn/VarExpl/15.1_V.Expl_Red_IntimAmigUndir.xlsx leído exitosamente con sufijo Red_IntimAmigUndir.\n",
+      "Archivo ../DataIn/VarExpl/15_Var.Explic_Rede_IntimAmigos.xlsx leído exitosamente con sufijo Rede_IntimAmigos.\n",
+      "Archivo ../DataIn/VarExpl/16_Var.Explic_RedeRisk.xlsx leído exitosamente con sufijo Var.Explic_RedeRisk.\n",
+      "Archivo ../DataIn/VarExpl/17_Var.Explic_Rede_Confianca.xlsx leído exitosamente con sufijo Rede_Confianca.\n",
+      "Archivo ../DataIn/VarExpl/19_Var.Explic_RedeConflitAguaPersist.xlsx leído exitosamente con sufijo Var.Explic_RedeConflitAguaPersist.\n",
+      "Archivo ../DataIn/VarExpl/20_RevVar.Expl_RedConflitGeralTot.xlsx leído exitosamente con sufijo RevVar.Expl_RedConflitGeralTot.\n",
+      "Archivo ../DataIn/VarExpl/21_Var.Explic_RedeConflitGeralPersist.xlsx leído exitosamente con sufijo Var.Explic_RedeConflitGeralPersist.\n",
+      "Archivo ../DataIn/VarExpl/Duda_22.1_Var.Explic_RedeVendaParcel.xlsx leído exitosamente con sufijo Var.Explic_RedeVendaParcel.\n",
+      "Archivo ../DataIn/VarExpl/Duda_22_Var.Explic_RedeEmprestParcel.xlsx leído exitosamente con sufijo Var.Explic_RedeEmprestParcel.\n",
+      "Archivo combinado guardado exitosamente en ../DataIntermediate/combined_data_indep_variables.csv.\n",
+      "Dimensiones del DataFrame resultante: (130, 203)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# Diccionario de archivos Excel con sus respectivas hojas\n",
+    "file_sheet_dict_indep = {\n",
+    "    \"../DataIn/VarExpl/0018_Rev_Var.Expl_RedConfliAguaTot.xlsx\": \"RedConfltAguTot_CentlitybByNod\",\n",
+    "    \"../DataIn/VarExpl/0019.1_RevV.Expl_RedConfliAguaReso.xlsx\": \"RedConfliAguaRes_CentlitybByNod\",\n",
+    "    \"../DataIn/VarExpl/12_Var.Explic_FamiRedIrmonsPrimos.xlsx\": \"RedeIrmonsPrimo_CentlitybByNods\",\n",
+    "    \"../DataIn/VarExpl/13_Var.Explic_FamiRedPaiTiopatCriadr.xlsx\": \"PaiTiopaterCriador_Transp_Centr\",\n",
+    "    \"../DataIn/VarExpl/14_Var.Explic_FamiRedTiosMaternos.xlsx\": \"TiosMaternos_Transp_Centr\",\n",
+    "    \"../DataIn/VarExpl/15.1_V.Expl_Red_IntimAmigUndir.xlsx\": \"IntimAmigUndi_CentalitybByNodes\",\n",
+    "    \"../DataIn/VarExpl/15_Var.Explic_Rede_IntimAmigos.xlsx\": \"IntimAmigos_CentalitybByNodes\",\n",
+    "    \"../DataIn/VarExpl/16_Var.Explic_RedeRisk.xlsx\": \"RedeRisk_CentalitybByNodes\",\n",
+    "    \"../DataIn/VarExpl/17_Var.Explic_Rede_Confianca.xlsx\": \"RedeConfianca_CentalityByNodes\",\n",
+    "    \"../DataIn/VarExpl/19_Var.Explic_RedeConflitAguaPersist.xlsx\": \"RedeConflitAgua_CentlitybByNod\",\n",
+    "    \"../DataIn/VarExpl/20_RevVar.Expl_RedConflitGeralTot.xlsx\": \"RedeConflitGerTo_CentlitybByNod\",\n",
+    "    \"../DataIn/VarExpl/21_Var.Explic_RedeConflitGeralPersist.xlsx\": \"RedeConflitGerPe_CentlitybByNod\",\n",
+    "    \"../DataIn/VarExpl/Duda_22.1_Var.Explic_RedeVendaParcel.xlsx\": \"VendaParcela_Transp_Centr\",\n",
+    "    \"../DataIn/VarExpl/Duda_22_Var.Explic_RedeEmprestParcel.xlsx\": \"EmprestParcela_Centr\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# Leer cada archivo y almacenar los datos en un diccionario\n",
+    "data_frames_indep = {}\n",
+    "\n",
+    "for file, sheet_name in file_sheet_dict_indep.items():\n",
+    "    try:\n",
+    "        # Leer la hoja especificada\n",
+    "        df = pd.read_excel(file, sheet_name=sheet_name)\n",
+    "        # Generar un sufijo corto basado en el nombre del archivo\n",
+    "        suffix = generate_short_suffix(file)\n",
+    "        # Añadir sufijo a las columnas\n",
+    "        df = df.add_suffix(f'_{suffix}')\n",
+    "        # Renombrar columna id para tener un nombre consistente\n",
+    "        df = df.rename(columns={f'id_{suffix}': 'id'})\n",
+    "        data_frames_indep[suffix] = df\n",
+    "        print(f\"Archivo {file} leído exitosamente con sufijo {suffix}.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error al leer el archivo {file}: {e}\")\n",
+    "\n",
+    "# Inicializar el DataFrame resultante con el primer DataFrame en el diccionario\n",
+    "result_df = None\n",
+    "\n",
+    "for suffix, df in data_frames_indep.items():\n",
+    "    if result_df is None:\n",
+    "        result_df = df\n",
+    "    else:\n",
+    "        result_df = pd.merge(result_df, df, on='id', how='outer')\n",
+    "\n",
+    "# Guardar el DataFrame resultante en un archivo CSV\n",
+    "output_path = \"../DataIntermediate/combined_data_indep_variables.csv\"\n",
+    "os.makedirs(\"../DataIntermediate/\", exist_ok=True)\n",
+    "try:\n",
+    "    result_df.to_csv(output_path, index=False)\n",
+    "    print(f\"Archivo combinado guardado exitosamente en {output_path}.\")\n",
+    "    print(f\"Dimensiones del DataFrame resultante: {result_df.shape}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error al guardar el archivo combinado: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Degree_Rede_EntreajudaLabur</th>\n",
+       "      <th>BetaCent_Rede_EntreajudaLabur</th>\n",
+       "      <th>2Step_Rede_EntreajudaLabur</th>\n",
+       "      <th>ARD_Rede_EntreajudaLabur</th>\n",
+       "      <th>Closeness_Rede_EntreajudaLabur</th>\n",
+       "      <th>Eigenvector_Rede_EntreajudaLabur</th>\n",
+       "      <th>Between_Rede_EntreajudaLabur</th>\n",
+       "      <th>2StepBet_Rede_EntreajudaLabur</th>\n",
+       "      <th>Frag_Rede_EntreajudaLabur</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Out2Step_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>In2Step_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>OutARD_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>InARD_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>OutClose_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>InClose_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>Between_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>2StepBet_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>Frag_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>DwFrag_Var.Dep_RedePartilhaAgu</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aiace Quior</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.016946</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>251</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000401</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>511</td>\n",
+       "      <td>516</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000050</td>\n",
+       "      <td>0.000029</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alamada Bia</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.003419</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>256</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.001006</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>516</td>\n",
+       "      <td>516</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000071</td>\n",
+       "      <td>-0.000061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alanghate Mfumba</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.032262</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>248</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000037</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>516</td>\n",
+       "      <td>516</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000071</td>\n",
+       "      <td>-0.000061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Albat Calabus</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.032262</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>248</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000037</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>516</td>\n",
+       "      <td>516</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000071</td>\n",
+       "      <td>-0.000061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Americano Mbunde</td>\n",
+       "      <td>19</td>\n",
+       "      <td>29.068657</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>239</td>\n",
+       "      <td>0.223607</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.001053</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>516</td>\n",
+       "      <td>516</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000071</td>\n",
+       "      <td>-0.000061</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 172 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 id  Degree_Rede_EntreajudaLabur  \\\n",
+       "0       Aiace Quior                            7   \n",
+       "1       Alamada Bia                            2   \n",
+       "2  Alanghate Mfumba                           10   \n",
+       "3     Albat Calabus                           10   \n",
+       "4  Americano Mbunde                           19   \n",
+       "\n",
+       "   BetaCent_Rede_EntreajudaLabur  2Step_Rede_EntreajudaLabur  \\\n",
+       "0                       0.016946                           7   \n",
+       "1                       0.003419                           2   \n",
+       "2                       0.032262                          10   \n",
+       "3                       0.032262                          10   \n",
+       "4                      29.068657                          19   \n",
+       "\n",
+       "   ARD_Rede_EntreajudaLabur  Closeness_Rede_EntreajudaLabur  \\\n",
+       "0                         7                             251   \n",
+       "1                         2                             256   \n",
+       "2                        10                             248   \n",
+       "3                        10                             248   \n",
+       "4                        19                             239   \n",
+       "\n",
+       "   Eigenvector_Rede_EntreajudaLabur  Between_Rede_EntreajudaLabur  \\\n",
+       "0                          0.000000                             0   \n",
+       "1                          0.000000                             0   \n",
+       "2                          0.000000                             0   \n",
+       "3                          0.000000                             0   \n",
+       "4                          0.223607                             0   \n",
+       "\n",
+       "   2StepBet_Rede_EntreajudaLabur  Frag_Rede_EntreajudaLabur  ...  \\\n",
+       "0                              0                  -0.000401  ...   \n",
+       "1                              0                  -0.001006  ...   \n",
+       "2                              0                  -0.000037  ...   \n",
+       "3                              0                  -0.000037  ...   \n",
+       "4                              0                   0.001053  ...   \n",
+       "\n",
+       "   Out2Step_Var.Dep_RedePartilhaAgu  In2Step_Var.Dep_RedePartilhaAgu  \\\n",
+       "0                                 2                                0   \n",
+       "1                                 0                                0   \n",
+       "2                                 0                                0   \n",
+       "3                                 0                                0   \n",
+       "4                                 0                                0   \n",
+       "\n",
+       "   OutARD_Var.Dep_RedePartilhaAgu  InARD_Var.Dep_RedePartilhaAgu  \\\n",
+       "0                             1.5                            0.0   \n",
+       "1                             0.0                            0.0   \n",
+       "2                             0.0                            0.0   \n",
+       "3                             0.0                            0.0   \n",
+       "4                             0.0                            0.0   \n",
+       "\n",
+       "   OutClose_Var.Dep_RedePartilhaAgu  InClose_Var.Dep_RedePartilhaAgu  \\\n",
+       "0                               511                              516   \n",
+       "1                               516                              516   \n",
+       "2                               516                              516   \n",
+       "3                               516                              516   \n",
+       "4                               516                              516   \n",
+       "\n",
+       "   Between_Var.Dep_RedePartilhaAgu  2StepBet_Var.Dep_RedePartilhaAgu  \\\n",
+       "0                                0                                 0   \n",
+       "1                                0                                 0   \n",
+       "2                                0                                 0   \n",
+       "3                                0                                 0   \n",
+       "4                                0                                 0   \n",
+       "\n",
+       "   Frag_Var.Dep_RedePartilhaAgu  DwFrag_Var.Dep_RedePartilhaAgu  \n",
+       "0                      0.000050                        0.000029  \n",
+       "1                     -0.000071                       -0.000061  \n",
+       "2                     -0.000071                       -0.000061  \n",
+       "3                     -0.000071                       -0.000061  \n",
+       "4                     -0.000071                       -0.000061  \n",
+       "\n",
+       "[5 rows x 172 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_frame_combinado_indep = pd.read_csv('../DataIntermediate/combined_data_dep_variables.csv', sep = ',')\n",
+    "\n",
+    "data_frame_combinado_indep.head()"
+   ]
   }
  ],
  "metadata": {
