--- a/Codes/1.Pre_process_data.ipynb
+++ b/Codes/1.Pre_process_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,13 +38,14 @@
     "    \"../DataIn/VarDep/36_Var.Dep_Red-Val_Cont1Rep2DiqCin.xlsx\": \"DiqCintCont1Rep2_trans_Centr\",\n",
     "    \"../DataIn/VarDep/37_Var.Dep_Red-Val_Cont1Rep2DiqPrq.xlsx\": \"DiqPriqContr1Rep2_trans_Centr\",\n",
     "    \"../DataIn/VarDep/38_Var.Dep_Red-Val_ContRep2_DiqPrqCin.xlsx\": \"ContRepDiqPriqCint_trans_Centr\",\n",
-    "    \"../DataIn/VarDep/39_Var.Dep_RedePartilhaAgu.xlsx\": \"RedePartilhaAgua_CentrbByNodes\"\n",
+    "    \"../DataIn/VarDep/39_Var.Dep_RedePartilhaAgu.xlsx\": \"RedePartilhaAgua_CentrbByNodes\",\n",
+    "    \"../DataIn/VarDep/Data_Superf_NumZonas.xlsx\": \"Data_area\"\n",
     "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -62,8 +63,9 @@
       "Archivo ../DataIn/VarDep/37_Var.Dep_Red-Val_Cont1Rep2DiqPrq.xlsx leído exitosamente con sufijo Red-Val_Cont1Rep2DiqPrq.\n",
       "Archivo ../DataIn/VarDep/38_Var.Dep_Red-Val_ContRep2_DiqPrqCin.xlsx leído exitosamente con sufijo ContRep2_DiqPrqCin.\n",
       "Archivo ../DataIn/VarDep/39_Var.Dep_RedePartilhaAgu.xlsx leído exitosamente con sufijo Var.Dep_RedePartilhaAgu.\n",
+      "Archivo ../DataIn/VarDep/Data_Superf_NumZonas.xlsx leído exitosamente con sufijo Superf_NumZonas.\n",
       "Archivo combinado guardado exitosamente en ../DataIntermediate/combined_data_dep_variables.csv.\n",
-      "Dimensiones del DataFrame resultante: (130, 172)\n"
+      "Dimensiones del DataFrame resultante: (188, 174)\n"
      ]
     }
    ],
