Update - Data_Superf_NumZonas included

--- a/Codes/1.Pre_process_data.ipynb
+++ b/Codes/1.Pre_process_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
       "Archivo ../DataIn/VarDep/39_Var.Dep_RedePartilhaAgu.xlsx leído exitosamente con sufijo Var.Dep_RedePartilhaAgu.\n",
       "Archivo ../DataIn/VarDep/Data_Superf_NumZonas.xlsx leído exitosamente con sufijo Superf_NumZonas.\n",
       "Archivo combinado guardado exitosamente en ../DataIntermediate/combined_data_dep_variables.csv.\n",
-      "Dimensiones del DataFrame resultante: (188, 174)\n"
+      "Dimensiones del DataFrame resultante: (130, 174)\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -152,8 +152,6 @@
        "      <th>2StepBet_Rede_EntreajudaLabur</th>\n",
        "      <th>Frag_Rede_EntreajudaLabur</th>\n",
        "      <th>...</th>\n",
-       "      <th>Out2Step_Var.Dep_RedePartilhaAgu</th>\n",
-       "      <th>In2Step_Var.Dep_RedePartilhaAgu</th>\n",
        "      <th>OutARD_Var.Dep_RedePartilhaAgu</th>\n",
        "      <th>InARD_Var.Dep_RedePartilhaAgu</th>\n",
        "      <th>OutClose_Var.Dep_RedePartilhaAgu</th>\n",
@@ -162,6 +160,8 @@
        "      <th>2StepBet_Var.Dep_RedePartilhaAgu</th>\n",
        "      <th>Frag_Var.Dep_RedePartilhaAgu</th>\n",
        "      <th>DwFrag_Var.Dep_RedePartilhaAgu</th>\n",
+       "      <th>Ha_Total_Superf_NumZonas</th>\n",
+       "      <th>N_Zonas_Superf_NumZonas</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -178,8 +178,6 @@
        "      <td>0</td>\n",
        "      <td>-0.000401</td>\n",
        "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>1.5</td>\n",
        "      <td>0.0</td>\n",
        "      <td>511</td>\n",
@@ -188,6 +186,8 @@
        "      <td>0</td>\n",
        "      <td>0.000050</td>\n",
        "      <td>0.000029</td>\n",
+       "      <td>2.3644</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -202,8 +202,6 @@
        "      <td>0</td>\n",
        "      <td>-0.001006</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>516</td>\n",
@@ -212,6 +210,8 @@
        "      <td>0</td>\n",
        "      <td>-0.000071</td>\n",
        "      <td>-0.000061</td>\n",
+       "      <td>0.5087</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -226,8 +226,6 @@
        "      <td>0</td>\n",
        "      <td>-0.000037</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>516</td>\n",
@@ -236,6 +234,8 @@
        "      <td>0</td>\n",
        "      <td>-0.000071</td>\n",
        "      <td>-0.000061</td>\n",
+       "      <td>1.4640</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -250,8 +250,6 @@
        "      <td>0</td>\n",
        "      <td>-0.000037</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>516</td>\n",
@@ -260,6 +258,8 @@
        "      <td>0</td>\n",
        "      <td>-0.000071</td>\n",
        "      <td>-0.000061</td>\n",
+       "      <td>1.5186</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -274,8 +274,6 @@
        "      <td>0</td>\n",
        "      <td>0.001053</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>516</td>\n",
@@ -284,10 +282,12 @@
        "      <td>0</td>\n",
        "      <td>-0.000071</td>\n",
        "      <td>-0.000061</td>\n",
+       "      <td>0.2500</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 172 columns</p>\n",
+       "<p>5 rows × 174 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -326,13 +326,6 @@
        "3                              0                  -0.000037  ...   \n",
        "4                              0                   0.001053  ...   \n",
        "\n",
-       "   Out2Step_Var.Dep_RedePartilhaAgu  In2Step_Var.Dep_RedePartilhaAgu  \\\n",
-       "0                                 2                                0   \n",
-       "1                                 0                                0   \n",
-       "2                                 0                                0   \n",
-       "3                                 0                                0   \n",
-       "4                                 0                                0   \n",
-       "\n",
        "   OutARD_Var.Dep_RedePartilhaAgu  InARD_Var.Dep_RedePartilhaAgu  \\\n",
        "0                             1.5                            0.0   \n",
        "1                             0.0                            0.0   \n",
@@ -354,17 +347,24 @@
        "3                                0                                 0   \n",
        "4                                0                                 0   \n",
        "\n",
-       "   Frag_Var.Dep_RedePartilhaAgu  DwFrag_Var.Dep_RedePartilhaAgu  \n",
-       "0                      0.000050                        0.000029  \n",
-       "1                     -0.000071                       -0.000061  \n",
-       "2                     -0.000071                       -0.000061  \n",
-       "3                     -0.000071                       -0.000061  \n",
-       "4                     -0.000071                       -0.000061  \n",
+       "   Frag_Var.Dep_RedePartilhaAgu  DwFrag_Var.Dep_RedePartilhaAgu  \\\n",
+       "0                      0.000050                        0.000029   \n",
+       "1                     -0.000071                       -0.000061   \n",
+       "2                     -0.000071                       -0.000061   \n",
+       "3                     -0.000071                       -0.000061   \n",
+       "4                     -0.000071                       -0.000061   \n",
        "\n",
-       "[5 rows x 172 columns]"
+       "   Ha_Total_Superf_NumZonas  N_Zonas_Superf_NumZonas  \n",
+       "0                    2.3644                        7  \n",
+       "1                    0.5087                        1  \n",
+       "2                    1.4640                        4  \n",
+       "3                    1.5186                        2  \n",
+       "4                    0.2500                        1  \n",
+       "\n",
+       "[5 rows x 174 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
