--- a/Codes/3.Model_RF.ipynb
+++ b/Codes/3.Model_RF.ipynb
@@ -4,11 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## First, run a lineal model of the variables\n",
-    "\n",
+    " # Run OLS and RF models\n",
     "  1. Is a good a idea consider the variables with more correlation. \n",
     "  2. I add all the variables beacuse I don't have enough knowledge of the variables. \n",
-    "  3. The code is ajusted to run the model with the variable that you want."
+    "  3. The code is ajusted to run the model with the variable that you want (applies for RF)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First, run a lineal model of the variables\n"
    ]
   },
   {
