--- a/Codes/2.Exploratory_analysis.ipynb
+++ b/Codes/2.Exploratory_analysis.ipynb
@@ -2925,7 +2925,7 @@
     "plt.figure(figsize=(25, 20))\n",
     "sns.heatmap(high_corr_pivot, annot=True, cmap='coolwarm', center=0, vmin=-1, vmax=1)\n",
     "plt.title('Heatmap of Highest Correlations between Dependent and Independent Variables')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
