--- a/Codes/1.Pre_process_data.ipynb
+++ b/Codes/1.Pre_process_data.ipynb
@@ -9,7 +9,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from -r requirements.txt (line 1)) (2.2.2)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from -r requirements.txt (line 2)) (1.5.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from -r requirements.txt (line 3)) (1.24.1)\n",
+      "Requirement already satisfied: scipy in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from -r requirements.txt (line 4)) (1.14.0)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from -r requirements.txt (line 5)) (3.9.0)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from -r requirements.txt (line 6)) (0.13.2)\n",
+      "Requirement already satisfied: openpyxl in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from -r requirements.txt (line 7)) (3.1.5)\n",
+      "Collecting statsmodels\n",
+      "  Downloading statsmodels-0.14.2-cp310-cp310-win_amd64.whl (9.8 MB)\n",
+      "     ---------------------------------------- 0.0/9.8 MB ? eta -:--:--\n",
+      "     ---------------------------------------- 0.1/9.8 MB 2.0 MB/s eta 0:00:05\n",
+      "     - -------------------------------------- 0.4/9.8 MB 5.4 MB/s eta 0:00:02\n",
+      "     ----- ---------------------------------- 1.4/9.8 MB 10.0 MB/s eta 0:00:01\n",
+      "     --------- ------------------------------ 2.3/9.8 MB 11.2 MB/s eta 0:00:01\n",
+      "     ------------- -------------------------- 3.2/9.8 MB 12.9 MB/s eta 0:00:01\n",
+      "     ----------------- ---------------------- 4.3/9.8 MB 13.8 MB/s eta 0:00:01\n",
+      "     --------------------- ------------------ 5.4/9.8 MB 15.0 MB/s eta 0:00:01\n",
+      "     -------------------------- ------------- 6.6/9.8 MB 15.6 MB/s eta 0:00:01\n",
+      "     ------------------------------- -------- 7.8/9.8 MB 17.3 MB/s eta 0:00:01\n",
+      "     ----------------------------------- ---- 8.8/9.8 MB 17.1 MB/s eta 0:00:01\n",
+      "     ---------------------------------------  9.8/9.8 MB 17.5 MB/s eta 0:00:01\n",
+      "     ---------------------------------------- 9.8/9.8 MB 15.7 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pandas->-r requirements.txt (line 1)) (2024.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pandas->-r requirements.txt (line 1)) (2.9.0.post0)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pandas->-r requirements.txt (line 1)) (2024.1)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from scikit-learn->-r requirements.txt (line 2)) (3.5.0)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from scikit-learn->-r requirements.txt (line 2)) (1.4.2)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from matplotlib->-r requirements.txt (line 5)) (3.1.2)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from matplotlib->-r requirements.txt (line 5)) (10.3.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from matplotlib->-r requirements.txt (line 5)) (1.4.5)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from matplotlib->-r requirements.txt (line 5)) (24.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from matplotlib->-r requirements.txt (line 5)) (4.53.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from matplotlib->-r requirements.txt (line 5)) (1.2.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from matplotlib->-r requirements.txt (line 5)) (0.12.1)\n",
+      "Requirement already satisfied: et-xmlfile in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from openpyxl->-r requirements.txt (line 7)) (1.1.0)\n",
+      "Collecting patsy>=0.5.6\n",
+      "  Downloading patsy-0.5.6-py2.py3-none-any.whl (233 kB)\n",
+      "     ---------------------------------------- 0.0/233.9 kB ? eta -:--:--\n",
+      "     ------------------------------------- 233.9/233.9 kB 14.0 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: six in c:\\users\\cespe\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from patsy>=0.5.6->statsmodels->-r requirements.txt (line 8)) (1.16.0)\n",
+      "Installing collected packages: patsy, statsmodels\n",
+      "Successfully installed patsy-0.5.6 statsmodels-0.14.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.0.1 -> 24.1.1\n",
+      "[notice] To update, run: C:\\Users\\cespe\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,8 +808,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
