Update - Distancias_promedio_casas_parcelas

--- a/Codes/4.DistanceMatriz.ipynb
+++ b/Codes/4.DistanceMatriz.ipynb
@@ -14156,6 +14156,64 @@
     "plt.grid(True)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El archivo con las distancias promedio se ha guardado como '../DataIntermediate/Distancias_promedio_casas_parcelas.xlsx'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from geopy.distance import geodesic\n",
+    "import numpy as np\n",
+    "\n",
+    "# Cargar datos de las casas de los productores\n",
+    "casas_df = pd.read_excel('../DataIn/VarExpl/Puntos_moranza.xlsx') \n",
+    "\n",
+    "# Cargar datos de las parcelas\n",
+    "parcels_df = pd.read_excel('../DataIn/Centroides.xlsx', sheet_name='Hoja1')  \n",
+    "parcels_df = parcels_df[['0_Nome_atu', 'X', 'Y']]  # Ajusta las columnas según tus datos\n",
+    "\n",
+    "# Renombrar las columnas para consistencia\n",
+    "casas_df.columns = ['Nombre', 'X_casa', 'Y_casa']\n",
+    "parcels_df.columns = ['Nombre', 'X_parcela', 'Y_parcela']\n",
+    "\n",
+    "# Crear una lista para almacenar las distancias promedio\n",
+    "dist_avg_list = []\n",
+    "\n",
+    "# Calcular la distancia promedio de la casa a las parcelas para cada productor\n",
+    "for nombre in casas_df['Nombre'].unique():\n",
+    "    casa = casas_df[casas_df['Nombre'] == nombre].iloc[0]\n",
+    "    parcelas = parcels_df[parcels_df['Nombre'] == nombre]\n",
+    "    \n",
+    "    if not parcelas.empty:\n",
+    "        dists = []\n",
+    "        casa_coords = (casa['Y_casa'], casa['X_casa'])\n",
+    "        \n",
+    "        for _, parcela in parcelas.iterrows():\n",
+    "            parcela_coords = (parcela['Y_parcela'], parcela['X_parcela'])\n",
+    "            dists.append(geodesic(casa_coords, parcela_coords).meters)\n",
+    "        \n",
+    "        avg_dist = np.mean(dists)\n",
+    "        dist_avg_list.append((nombre, avg_dist))\n",
+    "\n",
+    "# Convertir la lista a un DataFrame\n",
+    "dist_avg_df = pd.DataFrame(dist_avg_list, columns=['Nombre', 'Avg_Distancia'])\n",
+    "\n",
+    "# Guardar el resultado en un archivo Excel\n",
+    "output_path = '../DataIntermediate/Distancias_promedio_casas_parcelas.xlsx'\n",
+    "dist_avg_df.to_excel(output_path, index=False)\n",
+    "\n",
+    "print(f\"El archivo con las distancias promedio se ha guardado como '{output_path}'\")\n"
+   ]
   }
  ],
  "metadata": {
