--- a/Codes/2.Exploratory_analysis.ipynb
+++ b/Codes/2.Exploratory_analysis.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "import pandas as pd #lol\n",
     "import os\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler\n",
