--- a/Codes/4.DistanceMatriz.ipynb
+++ b/Codes/4.DistanceMatriz.ipynb
@@ -14158,6 +14158,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Interpretación del Gráfico:*\n",
+    "\n",
+    "El gráfico muestra una dispersión de los puntos en el espacio de los dos primeros componentes principales (PC1 y PC2).\n",
+    "La mayor parte de la variabilidad en los datos se captura en el eje PC1.\n",
+    "Los productores que están cerca uno del otro en este espacio tienen distancias similares entre sus parcelas.\n",
+    "Los productores más alejados en el gráfico tienen distancias más diversas entre sus parcelas.\n",
+    "\n",
+    "*Clusters y Outliers:*\n",
+    "\n",
+    "Puede haber grupos de productores con distancias similares si se observa una agrupación de puntos en ciertas áreas del gráfico.\n",
+    "Los puntos que se encuentran alejados del centro o de los grupos principales pueden considerarse outliers. Estos representan productores cuyas distancias son significativamente diferentes de las demás."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
