--- a/Codes/4.DistanceMatriz.ipynb
+++ b/Codes/4.DistanceMatriz.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geopandas as gpd\n",
-    "import folium\n",
+    "import geopandas as gpd # Update\n",
+    "+\n",
     "\n",
     "# Cargar el shapefile\n",
     "shapefile_path = '../DataIn/Centroides/Centroides_Nome_atu.shp'  \n",
