Update - Changes based on the last meeting

--- a/Codes/1.Pre_process_data.ipynb
+++ b/Codes/1.Pre_process_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,8 +63,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. **Acá es un punto importante. Si quiere modelar con Indeg, deje la ejecución de la siguiente celda sin cambiar nada. Si quiere modelar con 'OutDeg' debe eliminar 'Indeg' y escribir 'OutDeg'.**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +464,7 @@
        "[129 rows x 12 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,8 +516,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. **Acá es un punto importante. Si quiere modelar con Indeg, deje la ejecución de la siguiente celda sin cambiar nada. Si quiere modelar con 'OutDeg' debe eliminar 'Indeg' y escribir 'OutDeg'.**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1044,7 @@
        "[129 rows x 28 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
