--- a/Codes/1.Pre_process_data.ipynb
+++ b/Codes/1.Pre_process_data.ipynb
@@ -519,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. **Acá es un punto importante. Si quiere modelar con Indeg, deje la ejecución de la siguiente celda sin cambiar nada. Si quiere modelar con 'OutDeg' debe eliminar 'Indeg' y escribir 'OutDeg'.**"
+    "1. **Acá es un punto importante. Si quiere modelar con Indeg, deje la ejecución de la siguiente celda sin cambiar nada. Si quiere modelar con 'OutDeg' debe eliminar 'Indeg' y escribir 'OutDeg'.** OJO: esto va a modificar todos las salidad, de modo que es recomendable que una vez que ejecute copie los datos de la carpeta 'Result' y los almacene en otra carpeta."
    ]
   },
   {
