--- a/Codes/3.Model_RF.ipynb
+++ b/Codes/3.Model_RF.ipynb
@@ -1435,7 +1435,7 @@
     "    ws_filtered_r2.cell(row=idx + 1, column=2, value=row['R2 Ajustado'])\n",
     "\n",
     "# Guardar el archivo Excel\n",
-    "wb.save('../Results/resultados_regresiones ols.xlsx')\n"
+    "wb.save('../Results/resultados_regresiones_ols.xlsx')\n"
    ]
   },
   {
